traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:1: error: not found: value cpt
  ecritMessage(cpt)
               ^